sliders for gravity and step size

--- a/index.html
+++ b/index.html
@@ -39,5 +39,14 @@
      </div>
     </label>
     <div id="reset" class="button">reset</div>
+    <div id="remove-planet" class="button">–</div>
+    <div id="add-planet" class="button">+</div>
+    <div class="slidecontainer">
+      <input type="range" min="1" max="100" value="50" class="slide" id="step-size"><span class="slide-label">Step size</span>
+    </div>
+    <div class="slidecontainer">
+      <input type="range" min="1" max="100" value="50" class="slide" id="gravity">
+      ><span class="slide-label">Gravity</span>
+    </div>
   </body>
 </html>
