--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	<meta charset="utf-8">
+  	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="static/p5.min.js"></script>
     <script src="static/jquery.min.js"></script>
-    <script src="sketch.js"></script>
+    <!-- <script src="sketch.js"></script> -->
+    <script src="3d.js"></script>
     <link rel="stylesheet" href="static/style.css">
+    <title>Orbits</title>
   </head>
-  <body>
-    <!-- reset -->
-    <!-- toggle keep barycenter at center -->
-    <!-- toggle show history -->
-    
+  <body>    
     <div class="dropdown">
       <button class="dropbtn">origin: <span id="current-view">barycenter</span></button>
       <div class="dropdown-content">
