handling collisions to prevent weirdness

--- a/index.html
+++ b/index.html
@@ -28,17 +28,15 @@
       <!--END-->
      </div>
     </label>
-    <label class="switch">
+    <!-- <label class="switch">
      <input type="checkbox" id="togBtn-velocity">
      <div class="slider round">
-      <!--ADDED HTML -->
       <span class="on">velocity on</span>
       <span class="off">velocity off</span>
-      <!--END-->
      </div>
-    </label>
+    </label> -->
     <div id="reset" class="button">reset</div>
-    <div id="remove-planet" class="button">–</div>
+    <!-- <div id="remove-planet" class="button">–</div> -->
     <div id="add-planet" class="button">+</div>
     <div class="slidecontainer">
       <input type="range" min="1" max="100" value="50" class="slide" id="step-size"><span class="slide-label">Step size</span>
