--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <button class="dropbtn">origin: <span id="current-view">barycenter</span></button>
       <div class="dropdown-content">
         <a class="viewpoint" href="#barycenter">barycenter</a>
-        <a class="viewpoint" href="#planet">red planet</a>
+        <a class="viewpoint" href="#planet">first planet</a>
         <a class="viewpoint" href="#absolute">absolute</a>
       </div>
     </div>
@@ -28,13 +28,13 @@
       <!--END-->
      </div>
     </label>
-    <!-- <label class="switch">
-     <input type="checkbox" id="togBtn-velocity">
+    <label class="switch">
+     <input type="checkbox" id="togBtn-planets">
      <div class="slider round">
-      <span class="on">velocity on</span>
-      <span class="off">velocity off</span>
+      <span class="on">planets on</span>
+      <span class="off">planets off</span>
      </div>
-    </label> -->
+    </label>
     <div id="reset" class="button">reset</div>
     <!-- <div id="remove-planet" class="button">–</div> -->
     <div id="add-planet" class="button">+</div>
